--- a/DrugResistance/build.gradle
+++ b/DrugResistance/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'org.fstrf.stanfordAsiInterpreter.resistance:resistance:1.0'
     compile project(':Aligner')
+    compile project(':NGS')
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.5'
     testCompile project(':Utilities')
